<resources>
    <string name="app_name">MyNotes</string>
    <string name="login">Login!</string>
    <string name="login1">Login</string>
    <string name="enter_email_address">Enter Email Address...</string>
    <string name="enter_password">Enter Password...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">add notes</string>
    <string name="logout">logout</string>
    <string name="add_your_notes">Add Your Notes !!</string>
    <string name="submit">Submit</string>
    <string name="write_your_notes_here">Write Your Notes Here...</string>
    <string name="enter_heading_to_your_note">Enter heading to your note....</string>
    <string name="hii_there">Hii there</string>
    <string name="edit_your_notes">Edit Your Notes..</string>
    <string name="edit">Edit</string>
    <string name="your_notes">Your Notes..</string>
    <string name="mynotes">myNotes...</string>
    <string name="heading">Heading-</string>
</resources>
