<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rishabh.mynotes.Edit">

    <!-- TODO: Update blank fragment layout -->

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/edit_your_notes"
    android:textSize="40sp"
    android:textAlignment="center"
    android:textStyle="bold|italic"
    android:textColor="#19b5d1"
    android:id="@+id/textView2"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:id="@+id/layout1">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/heading"
    android:textSize="20sp"
    android:textStyle="bold|italic"
    android:textColor="@color/colorPrimaryDark"
    />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:gravity="left"
            android:textSize="20sp"
            android:textStyle="italic"
            android:id="@+id/editHeading"
            />

    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout1"
        android:id="@+id/editNotes"
        android:layout_above="@+id/edit"
        android:gravity="top|left"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/edit"
        android:id="@+id/edit"
        android:textStyle="bold|italic"
        style="?android:attr/borderlessButtonStyle"
        />
</RelativeLayout>
